--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   <header>
     <div id="header-wrap">
 		<h1><%= link_to "colcho.net", root_path %> </h1> 
-		<nav>
-			<ul>
-			<li><%= link_to "Quartos", rooms_path %> </li> <li><%= link_to "Usuarios", users_path %> </li>
-			</ul>
-		</nav>
+		<% if user_signed_in? %>
+			<%= render 'layouts/user_navbar' %> 
+		<% else %>
+			<%= render 'layouts/visitor_navbar' %> 
+		<% end %>
     </div>
 	</header>
 	<div id="content">
