--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@user) do |f| %>
 
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-    </div>
-  <% end %>
+ <% if @user.errors.any? %> 
+ <div id="error_explanation">
+  <%= t 'general.form_error' %> 
+ </div>
+ <% end %>
 
   <p>
     <%= f.label :full_name %>
