--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
-<h1>Perfil: <%= @user.full_name %> </h1>
+<h1><%= t '.perfil', user_name: @user.full_name %> </h1>
 <ul>
-<li>Localizacao: <%= @user.location %> </li> 
-<li>Bio: <%= @user.bio %> </li>
+<li><%= t '.location', location: @user.location %> </li> 
+<li><%= t '.bio', bio: @user.bio %> </li>
 </ul>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to t('links.back'), users_path %>
+<%= link_to t('links.home'), root_path %>
